# harness

./: .gitignore  AGENTS.md  ANALYSIS.md  CHANGELOG-portability.md  MEMORY.md  PROGRESS.md  TODO.md  agent-tui-refactor.md  agent.py  agent_loop.py  agent_refactoring_plan.md  agents  agents.config.json  ai_coding_assistants_2025.md  big_plan.md  categorized_findings.py  code-review.md  config.py  demo.txt  demo_table.py  dependency_analyzer.py  dependency_issues_analysis.py  dependency_report.json  external_deps_analysis.py  harness.py  import_refactoring_report.md  model_utils.py  original_source.py  plan.md  portability_report.md  progress.md  project_analysis.md  pyproject.toml  refactor_plan.md  refactoring_analysis.md  requirements.txt  research_notes.md  sample_table.md  skills_discovery.py  skills_interceptor.py  (+15 more)
.devcontainer/: Dockerfile  devcontainer.json
.nanocoder/: agents.config.json  tasks.json
agent/: __init__.py  core.py  discovery.py  executor.py  loop.py  session.py  session_utils.py  task_list.py  tool_context.py  types.py  utils.py
agents/: analyst.yaml  coder.yaml  main.yaml  sysadmin.yaml  writer.yaml
commands/: __init__.py  compress.py  exit_quit.py  load_session.py  new.py  save_session.py  sub.py  tasks.py
docs/: events.md  speculative_features.md
harness_core/: __init__.py  __main__.py  config.py  event_types.py  eventbus.py  memory.py  utils.py
model/: __init__.py  provider.py  types.py  utils.py
session/: context_compression.py  session.py  session_utils.py
sessions/: context_compression.py
skills/: __init__.py  base.py  discovery.py  interceptor.py
terminal_io/: __init__.py  boxes.py  colors.py  display.py  prompt.py  speed.py  trunc.py  tui.py
tests/: conftest.py  test_agent.py  test_commands.py  test_context_compression.py  test_discovery.py  test_goal.py  (+36 more)
(+537 files in other folders)
