[project]
name = "harness"
version = "0.1.0"
description = "An LLM agent harness for terminal-driven multi-agent workflows."
requires-python = ">=3.14"
dependencies = [
    "ddgs>=9.14.4",
    "openai",
    "pyyaml",
    "rich",
    "textual>=0.80.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
harness = "harness_core.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["harness_core*"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
